gccida/g2/peephole2_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59364:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.insn = 0LL; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59369:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59375:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59376:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59379:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59383:61: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( *_pmatch_len = 0, ( result = gen_peephole2_1246( insn, recog_data_0.operand)) == 0LL) ) 
                                                            ^~~~~~~~~~~~
                                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59386:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59390:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59391:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59399:61: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( *_pmatch_len = 0, ( result = gen_peephole2_1249( insn, recog_data_0.operand)) == 0LL) ) 
                                                            ^~~~~~~~~~~~
                                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59403:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59414:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
result = gen_peephole2_1252( insn, recog_data_0.operand); 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59423:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59424:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0[1]; 
                      ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59427:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59431:61: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| ( *_pmatch_len = 0, ( result = gen_peephole2_1245( insn, recog_data_0.operand)) == 0LL) ) 
                                                            ^~~~~~~~~~~~
                                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59434:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59438:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v7.rtx; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/insn-recog.c:59439:23: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7.rtwint = ( __int64)x0[1]; 
                      ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/peephole2_insns/src/obj/insn-recog.o] Error 1
